gcc/testsuite/rust/rustc/ui/parser/empty-impl-semicolon.rs
impl Foo; // { dg-error "" "" { target *-*-* } }

